tests/models/struct/unnamed/f64/fail/le.rs
use dade::model;
#[model]
struct TestModel (
   #[field(le = 2)]
    f64
);
fn main() {}
